fix anchor alignment

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -76,7 +76,7 @@
   position: absolute;
   text-decoration: none;
   width: 1.75ex;
-  margin-left: -1.5ex;
+  margin-left: -2.25ex;
   visibility: hidden;
   font-size: 0.8em;
   font-weight: normal;
